feat(fe): small fix

--- a/packages/frontend/src/components/UseBorder/index.less
+++ b/packages/frontend/src/components/UseBorder/index.less
@@ -1,12 +1,12 @@
 @border-width: 3px;
 
-.w-use-border {
+.w-use_border {
   border: @border-width solid;
   border-radius: 5px;
   position: relative;
   display: inline-block;
 
-  .w-use-border-mask {
+  .w-use_border-mask {
     position: absolute;
     right: 6%;
     top: -2 * @border-width;
