--- a/packages/frontend/src/components/UseMenu/index.less
+++ b/packages/frontend/src/components/UseMenu/index.less
@@ -1,11 +1,11 @@
-.use-menu {
+.w-use_menu {
   position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
 
-  .use-border {
+  .w-use_border {
     position: absolute;
     top: 46%;
     left: 50%;
