--- a/packages/frontend/src/pages/CreateRoom/index.module.less
+++ b/packages/frontend/src/pages/CreateRoom/index.module.less
@@ -41,6 +41,11 @@
       padding: 0 0.5rem;
       line-height: 2.4rem;
       overflow: visible;
+
+      background: var(--bg);
+      border: none;
+      outline: none;
+      caret-color: var(--secondary);
     }
 
     // .useborder {
