--- a/packages/frontend/src/index.less
+++ b/packages/frontend/src/index.less
@@ -18,16 +18,23 @@
 .w-container {
   color: var(--on-bg);
   fill: var(--on-bg);
+  min-height: 100vh;
+  background: var(--bg);
 }
 
 .w-main {
   max-width: 500px;
-  min-height: 100vh;
   margin: auto;
-  background: var(--bg);
 }
 
 body {
   margin: 0;
-  min-height: 100vw;
+}
+
+input {
+  background: var(--bg);
+  border: none;
+  border-radius: 2px;
+  outline: none;
+  caret-color: var(--secondary);
 }
