feat(fe): 完成 player list

--- a/packages/frontend/src/index.less
+++ b/packages/frontend/src/index.less
@@ -5,12 +5,14 @@
 
 .w-container.dark {
   --bg: @black;
+  --bg-2: @black-2;
   --on-bg: @white;
   --secondary: @white-2;
 }
 
 .w-container.light {
   --bg: @white;
+  --bg-2: @white-2;
   --on-bg: @black;
   --secondary: @black-2;
 }
