feat(fe): 完成wait room

--- a/packages/frontend/src/pages/WaitRoom/index.module.less
+++ b/packages/frontend/src/pages/WaitRoom/index.module.less
@@ -15,6 +15,11 @@
     align-items: center;
     flex-direction: column;
     gap: 1rem;
+    margin-top: 1rem;
   }
 
+  .qr_code {
+    margin: 1rem;
+    text-align: center;
+  }
 }
