fix(fe): 修复弹窗的样式

--- a/packages/frontend/src/components/Dialog/index.less
+++ b/packages/frontend/src/components/Dialog/index.less
@@ -8,9 +8,14 @@
   word-break: break-word;
   padding: 1.5rem 0 0rem;
 
+  &-main {
+    background: var(--bg);
+  }
+
   .confirm {
     margin-top: 1rem;
     padding: 0.5rem;
     cursor: pointer;
+    text-align: center;
   }
 }
