feat(fe): 完成CharacterInfo组件

--- a/packages/frontend/src/pages/Play/components/CharacterInfo/index.module.less
+++ b/packages/frontend/src/pages/Play/components/CharacterInfo/index.module.less
@@ -1,3 +1,22 @@
 .w-character_info {
-  perspective: placeholder;
+  text-align: center;
+
+  :global {
+    .w-avatar {
+      width: 40%;
+    }
+  }
+
+  .character {
+    font-size: 1.2rem;
+    margin: 1rem;
+
+    .character_name {
+      font-weight: bold;
+    }
+  }
+
+  .intro {
+    text-align: left;
+  }
 }
