--- a/packages/frontend/src/components/Dialog/index.less
+++ b/packages/frontend/src/components/Dialog/index.less
@@ -12,6 +12,10 @@
     background: var(--bg);
   }
 
+  &-content {
+    padding-top: 1rem;
+  }
+
   .confirm {
     margin-top: 1rem;
     padding: 0.5rem;
