feat(all): add _IS_DEV flag

--- a/packages/frontend/src/pages/Play/components/BottomActions/index.module.less
+++ b/packages/frontend/src/pages/Play/components/BottomActions/index.module.less
@@ -2,11 +2,11 @@
 
   @height: 3rem;
 
-  .action-holder {
+  .bottom_actions-holder {
     height: @height;
   }
 
-  .actions {
+  .bottom_actions {
     position: fixed;
     background-color: var(--bg);
     right: 0;
