--- a/packages/frontend/src/pages/Play/components/Events/index.module.less
+++ b/packages/frontend/src/pages/Play/components/Events/index.module.less
@@ -1,9 +1,20 @@
 .w-events {
   text-align: center;
 
+  .border {
+    overflow: hidden auto;
+    max-height: 80vh;
+  }
+
   .title {
     font-size: 1.3rem;
     font-weight: bold;
     margin-bottom: 1rem;
+  }
+
+  .placeholder {
+    text-align: center;
+    opacity: 0.5;
+    padding: 2rem 0;
   }
 }
